create github page

--- a/index.html
+++ b/index.html
@@ -4,45 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi página personal</title>
 </head>
 <body>
-    <form>
-        <table>
-            <tr>
-                <td>
-                    URL:
-                </td>
-                <td>
-                    <input type="url" name="url" required>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Número:
-                </td>
-                <td>
-                    <input type="number" step="2" min="0" max="3">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Archivo:
-                </td>
-                <td>
-                    <input type="file">
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button>
-                        Enviar
-                    </button>
-                    <input type="reset" value="Clean"/>
-                </td>
-            </tr>
-        </table>
-    </form>
-    <a href="index.html">Volver</a>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="contanto.html">Contacto</a>
+                </li>
+                <li>
+                    <a href="experiencia.html">Experiencia</a>                        
+                </li>
+                <li>
+                    <a href="formacion.html">Formación</a>                        
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Título</h1>
+            <p>Soy carlos lópez</p>
+        </section>
+    </main>
 </body>
 </html>
