--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="menu">
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
                 <li>
                     <a href="./pages/contacto.html">Contacto</a>
                 </li>
@@ -24,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="contenido">
             <h1>Título</h1>
             <p>Soy carlos lópez</p>
         </section>
